Issue IMCMS-786 imcms:menu tag doesn't work: - Add/edit tests